--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <video width="320" height="240" controls>
-        <source src="https://storage.googleapis.com/42uz/express-backend/2%202%205.mp4" type="video/mp4">
+        <source src=" http://localhost:8080/videos/42" type="video/mp4">
         Your browser does not support the video tag.
     </video>
 
